--- a/index.html
+++ b/index.html
@@ -1,1 +1,224 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Christina’s Kreations</title>
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&family=Parisienne&display=swap" rel="stylesheet">
+
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+  <style>
+    :root{
+      --ink:#3b2f2f;
+      --ink-soft: rgba(59,47,47,.72);
+
+      --brown:#7a5c45;
+      --sage:#8a9a7b;
+      --terra:#c08a6a;
+
+      --card: rgba(255,255,255,.55);
+      --card-border: rgba(59,47,47,.12);
+
+      --shadow: 0 18px 40px rgba(0,0,0,.10);
+      --soft-shadow: 0 10px 20px rgba(0,0,0,.08);
+    }
+
+    *{ box-sizing:border-box; }
+    html,body{ height:100%; }
+
+    body{
+      margin:0;
+      font-family:"Cormorant Garamond", serif;
+      color:var(--ink);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding: 28px 14px;
+
+      /* 🌸 Pale floral wallpaper + parchment overlay */
+      background-image:
+        linear-gradient(rgba(246,241,231,.85), rgba(246,241,231,.85)),
+        url("https://images.unsplash.com/photo-1524593119771-9db9b3e4f9f5?auto=format&fit=crop&w=1200&q=60");
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+    }
+
+    .wrap{
+      width:min(440px, 100%);
+      position:relative;
+    }
+
+    .ornament{
+      position:absolute;
+      width:120px;
+      opacity:.55;
+      pointer-events:none;
+    }
+    .ornament.left{ left:-34px; top:120px; transform: rotate(-6deg); }
+    .ornament.right{ right:-34px; top:120px; transform: rotate(6deg) scaleX(-1); }
+
+    .card{
+      border-radius: 22px;
+      background: var(--card);
+      border: 1px solid var(--card-border);
+      box-shadow: var(--shadow);
+      backdrop-filter: blur(5px);
+      padding: 26px 22px 22px;
+      text-align:center;
+    }
+
+    .badge{
+      width:215px;
+      height:120px;
+      margin: 0 auto;
+      border-radius:999px;
+      background: rgba(255,255,255,.65);
+      border: 1.5px solid rgba(59,47,47,.22);
+      box-shadow: var(--soft-shadow);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      position:relative;
+    }
+
+    .badge:before{
+      content:"";
+      position:absolute;
+      inset:10px;
+      border-radius:999px;
+      border:1px solid rgba(59,47,47,.14);
+    }
+
+    .brand{
+      font-family:"Parisienne", cursive;
+      font-size:34px;
+      line-height:1.05;
+      padding:0 16px;
+    }
+
+    .brand small{
+      display:block;
+      font-family:"Cormorant Garamond", serif;
+      font-size:12px;
+      letter-spacing:2px;
+      margin-top:6px;
+      opacity:.75;
+    }
+
+    .tagline{
+      margin-top:10px;
+      font-style:italic;
+      font-size:15px;
+      color:var(--ink-soft);
+    }
+
+    .divider{
+      width:70px;
+      height:1px;
+      background:rgba(59,47,47,.25);
+      margin:18px auto;
+    }
+
+    .links{
+      display:flex;
+      flex-direction:column;
+      gap:11px;
+    }
+
+    .btn{
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      gap:10px;
+      padding:14px;
+      border-radius:14px;
+      color:#fff;
+      text-decoration:none;
+      font-size:16px;
+      box-shadow: 0 10px 18px rgba(0,0,0,.10);
+      transition:.15s ease;
+    }
+
+    .btn:hover{
+      transform:translateY(-2px);
+      box-shadow:0 14px 28px rgba(0,0,0,.14);
+    }
+
+    .brown{ background:var(--brown); }
+    .sage{ background:var(--sage); }
+    .terra{ background:var(--terra); }
+
+    .footer{
+      margin-top:18px;
+      display:flex;
+      justify-content:center;
+      gap:16px;
+      font-size:14px;
+    }
+
+    .footer a{
+      color:var(--ink);
+      text-decoration:none;
+      opacity:.75;
+      border-bottom:1px dotted rgba(59,47,47,.4);
+    }
+
+    .footer a:hover{ opacity:1; }
+
+    @media(max-width:380px){
+      .ornament{ display:none; }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="wrap">
+
+    <!-- Side ornaments -->
+    <svg class="ornament left" viewBox="0 0 200 260">
+      <path d="M98 18c-18 28-14 57 14 78 18 13 34 34 32 64-2 41-43 73-88 70"
+        fill="none" stroke="rgba(59,47,47,.55)" stroke-width="2"/>
+    </svg>
+
+    <svg class="ornament right" viewBox="0 0 200 260">
+      <path d="M98 18c-18 28-14 57 14 78 18 13 34 34 32 64-2 41-43 73-88 70"
+        fill="none" stroke="rgba(59,47,47,.55)" stroke-width="2"/>
+    </svg>
+
+    <main class="card">
+      <div class="badge">
+        <div class="brand">
+          Christina’s Kreations
+          <small>HANDMADE</small>
+        </div>
+      </div>
+
+      <p class="tagline">Handcrafted pieces made with care & creativity</p>
+
+      <div class="divider"></div>
+
+      <div class="links">
+        <a class="btn brown" href="#"><i class="fa-solid fa-fire-flame-curved"></i> Shop Decorative Candles</a>
+        <a class="btn sage" href="#"><i class="fa-solid fa-cheese"></i> Charcuterie Boards</a>
+        <a class="btn terra" href="#"><i class="fa-solid fa-pen-nib"></i> Custom Orders</a>
+        <a class="btn brown" href="#"><i class="fa-solid fa-camera-retro"></i> Latest Creations</a>
+        <a class="btn sage" href="mailto:hello@christinaskreations.com"><i class="fa-solid fa-envelope"></i> Contact Christina</a>
+      </div>
+
+      <div class="footer">
+        <a href="#">Instagram</a>
+        <a href="#">Facebook</a>
+        <a href="mailto:hello@christinaskreations.com">Email</a>
+      </div>
+    </main>
+  </div>
+</body>
+</html>
