--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -40,44 +39,65 @@
       display:flex;
       align-items:center;
       justify-content:center;
-      padding: 28px 14px;
+
+      /* Responsive outer padding */
+      padding: clamp(18px, 3vw, 44px) clamp(12px, 3vw, 22px);
 
       /* 🌸 Pale floral wallpaper + parchment overlay */
       background-image:
         linear-gradient(rgba(246,241,231,.85), rgba(246,241,231,.85)),
-        url("https://images.unsplash.com/photo-1524593119771-9db9b3e4f9f5?auto=format&fit=crop&w=1200&q=60");
+        url("https://images.unsplash.com/photo-1524593119771-9db9b3e4f9f5?auto=format&fit=crop&w=1600&q=60");
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
     }
 
+    /* Better behavior on iOS (background-attachment: fixed can stutter) */
+    @media (max-width: 900px){
+      body{ background-attachment: scroll; }
+    }
+
     .wrap{
-      width:min(440px, 100%);
+      width: min(560px, 100%);
       position:relative;
+
+      /* Adds breathing room that scales */
+      padding: clamp(6px, 1.8vw, 18px);
     }
 
     .ornament{
       position:absolute;
-      width:120px;
+      width: clamp(84px, 14vw, 120px);
       opacity:.55;
       pointer-events:none;
     }
-    .ornament.left{ left:-34px; top:120px; transform: rotate(-6deg); }
-    .ornament.right{ right:-34px; top:120px; transform: rotate(6deg) scaleX(-1); }
+    .ornament.left{
+      left: clamp(-18px, -4vw, -34px);
+      top: clamp(92px, 16vw, 140px);
+      transform: rotate(-6deg);
+    }
+    .ornament.right{
+      right: clamp(-18px, -4vw, -34px);
+      top: clamp(92px, 16vw, 140px);
+      transform: rotate(6deg) scaleX(-1);
+    }
 
     .card{
-      border-radius: 22px;
+      border-radius: clamp(18px, 3vw, 24px);
       background: var(--card);
       border: 1px solid var(--card-border);
       box-shadow: var(--shadow);
       backdrop-filter: blur(5px);
-      padding: 26px 22px 22px;
+      -webkit-backdrop-filter: blur(5px);
+
+      /* Responsive inner padding */
+      padding: clamp(18px, 4vw, 30px) clamp(14px, 4vw, 26px) clamp(16px, 3.5vw, 26px);
       text-align:center;
     }
 
     .badge{
-      width:215px;
-      height:120px;
+      width: min(250px, 78vw);
+      height: calc(min(250px, 78vw) * 0.56);
       margin: 0 auto;
       border-radius:999px;
       background: rgba(255,255,255,.65);
@@ -92,59 +112,71 @@
     .badge:before{
       content:"";
       position:absolute;
-      inset:10px;
+      inset: clamp(8px, 2vw, 10px);
       border-radius:999px;
       border:1px solid rgba(59,47,47,.14);
     }
 
     .brand{
       font-family:"Parisienne", cursive;
-      font-size:34px;
+      font-size: clamp(28px, 6vw, 36px);
       line-height:1.05;
-      padding:0 16px;
+      padding: 0 clamp(10px, 3vw, 18px);
     }
 
     .brand small{
       display:block;
       font-family:"Cormorant Garamond", serif;
-      font-size:12px;
-      letter-spacing:2px;
-      margin-top:6px;
+      font-size: clamp(10px, 2.7vw, 12px);
+      letter-spacing: 2px;
+      margin-top: 6px;
       opacity:.75;
     }
 
     .tagline{
-      margin-top:10px;
+      margin-top: 10px;
       font-style:italic;
-      font-size:15px;
+      font-size: clamp(13px, 3.4vw, 16px);
       color:var(--ink-soft);
     }
 
     .divider{
-      width:70px;
+      width: clamp(58px, 14vw, 76px);
       height:1px;
       background:rgba(59,47,47,.25);
-      margin:18px auto;
+      margin: clamp(14px, 3vw, 18px) auto;
     }
 
     .links{
       display:flex;
       flex-direction:column;
-      gap:11px;
+      gap: clamp(9px, 2.2vw, 12px);
     }
 
     .btn{
       display:flex;
       align-items:center;
       justify-content:center;
-      gap:10px;
-      padding:14px;
-      border-radius:14px;
+      gap: 10px;
+
+      /* Responsive size + tap target */
+      padding: clamp(12px, 3.6vw, 15px);
+      border-radius: clamp(12px, 3.5vw, 16px);
+
       color:#fff;
       text-decoration:none;
-      font-size:16px;
+      font-size: clamp(14px, 3.8vw, 17px);
+      line-height: 1.2;
+      text-align:center;
+
       box-shadow: 0 10px 18px rgba(0,0,0,.10);
-      transition:.15s ease;
+      transition: transform .15s ease, box-shadow .15s ease;
+    }
+
+    .btn i{
+      font-size: 1em;
+      opacity: .95;
+      flex: 0 0 auto;
     }
 
     .btn:hover{
@@ -152,16 +184,28 @@
       box-shadow:0 14px 28px rgba(0,0,0,.14);
     }
 
+    /* Better feel on touch devices */
+    @media (hover: none){
+      .btn:hover{
+        transform:none;
+        box-shadow: 0 10px 18px rgba(0,0,0,.10);
+      }
+      .btn:active{
+        transform: translateY(1px);
+      }
+    }
+
     .brown{ background:var(--brown); }
     .sage{ background:var(--sage); }
     .terra{ background:var(--terra); }
 
     .footer{
-      margin-top:18px;
+      margin-top: clamp(14px, 3vw, 18px);
       display:flex;
       justify-content:center;
-      gap:16px;
-      font-size:14px;
+      gap: clamp(12px, 3vw, 18px);
+      font-size: clamp(13px, 3.2vw, 14px);
+      flex-wrap: wrap;
     }
 
     .footer a{
@@ -173,7 +217,8 @@
 
     .footer a:hover{ opacity:1; }
 
-    @media(max-width:380px){
+    /* Hide ornaments on very small screens */
+    @media (max-width:380px){
       .ornament{ display:none; }
     }
   </style>
@@ -183,12 +228,12 @@
   <div class="wrap">
 
     <!-- Side ornaments -->
-    <svg class="ornament left" viewBox="0 0 200 260">
+    <svg class="ornament left" viewBox="0 0 200 260" aria-hidden="true">
       <path d="M98 18c-18 28-14 57 14 78 18 13 34 34 32 64-2 41-43 73-88 70"
         fill="none" stroke="rgba(59,47,47,.55)" stroke-width="2"/>
     </svg>
 
-    <svg class="ornament right" viewBox="0 0 200 260">
+    <svg class="ornament right" viewBox="0 0 200 260" aria-hidden="true">
       <path d="M98 18c-18 28-14 57 14 78 18 13 34 34 32 64-2 41-43 73-88 70"
         fill="none" stroke="rgba(59,47,47,.55)" stroke-width="2"/>
     </svg>
@@ -206,11 +251,11 @@
       <div class="divider"></div>
 
       <div class="links">
-        <a class="btn brown" href="#"><i class="fa-solid fa-fire-flame-curved"></i> Shop Decorative Candles</a>
-        <a class="btn sage" href="#"><i class="fa-solid fa-cheese"></i> Charcuterie Boards</a>
-        <a class="btn terra" href="#"><i class="fa-solid fa-pen-nib"></i> Custom Orders</a>
-        <a class="btn brown" href="#"><i class="fa-solid fa-camera-retro"></i> Latest Creations</a>
-        <a class="btn sage" href="mailto:hello@christinaskreations.com"><i class="fa-solid fa-envelope"></i> Contact Christina</a>
+        <a class="btn brown" href="#"><i class="fa-solid fa-fire-flame-curved" aria-hidden="true"></i> Shop Decorative Candles</a>
+        <a class="btn sage" href="#"><i class="fa-solid fa-cheese" aria-hidden="true"></i> Charcuterie Boards</a>
+        <a class="btn terra" href="#"><i class="fa-solid fa-pen-nib" aria-hidden="true"></i> Custom Orders</a>
+        <a class="btn brown" href="#"><i class="fa-solid fa-camera-retro" aria-hidden="true"></i> Latest Creations</a>
+        <a class="btn sage" href="mailto:hello@christinaskreations.com"><i class="fa-solid fa-envelope" aria-hidden="true"></i> Contact Christina</a>
       </div>
 
       <div class="footer">
