--- a/index.html
+++ b/index.html
@@ -259,10 +259,11 @@
       </div>
 
       <div class="footer">
-        <a href="#">Instagram</a>
-        <a href="#">Facebook</a>
-        <a href="mailto:hello@christinaskreations.com">Email</a>
-      </div>
+  <a href="#" target="_blank" rel="noreferrer">Instagram</a>
+  <a href="#" target="_blank" rel="noreferrer">Facebook</a>
+  <a href="#" target="_blank" rel="noreferrer">TikTok</a>
+</div>
+
     </main>
   </div>
 </body>
