--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
       display:flex;
       align-items:center;
       justify-content:center;
+
+      /* Responsive outer padding */
       padding: clamp(18px, 3vw, 44px) clamp(12px, 3vw, 22px);
 
-      /* 🎞️ RENDER BACKGROUND IMAGE */
+      /* ✅ Your render background */
       background-image: url("Assets/background.png");
       background-size: cover;
       background-position: center;
@@ -49,7 +51,7 @@
       background-attachment: fixed;
     }
 
-    /* Mobile fix for iOS */
+    /* Mobile fix (prevents iOS scroll jank) */
     @media (max-width: 900px){
       body{ background-attachment: scroll; }
     }
@@ -60,16 +62,36 @@
       padding: clamp(6px, 1.8vw, 18px);
     }
 
+    /* Side ornaments */
+    .ornament{
+      position:absolute;
+      width: clamp(84px, 14vw, 120px);
+      opacity:.55;
+      pointer-events:none;
+      filter: drop-shadow(0 10px 14px rgba(0,0,0,.08));
+    }
+    .ornament.left{
+      left: clamp(-18px, -4vw, -34px);
+      top: clamp(92px, 16vw, 140px);
+      transform: rotate(-6deg);
+    }
+    .ornament.right{
+      right: clamp(-18px, -4vw, -34px);
+      top: clamp(92px, 16vw, 140px);
+      transform: rotate(6deg) scaleX(-1);
+    }
+
     .card{
       border-radius: clamp(18px, 3vw, 24px);
       background: var(--card);
       border: 1px solid var(--card-border);
       box-shadow: var(--shadow);
       backdrop-filter: blur(2px);
-      padding:
-        clamp(18px, 4vw, 30px)
-        clamp(14px, 4vw, 26px)
-        clamp(16px, 3.5vw, 26px);
+      -webkit-backdrop-filter: blur(2px);
+
+      padding: clamp(18px, 4vw, 30px)
+               clamp(14px, 4vw, 26px)
+               clamp(16px, 3.5vw, 26px);
       text-align:center;
     }
 
@@ -100,6 +122,7 @@
       font-size: clamp(28px, 6vw, 36px);
       line-height:1.05;
       padding: 0 clamp(10px, 3vw, 18px);
+      text-shadow: 0 1px 0 rgba(255,255,255,.35);
     }
 
     .brand small{
@@ -136,19 +159,39 @@
       align-items:center;
       justify-content:center;
       gap: 10px;
+
       padding: clamp(12px, 3.6vw, 15px);
       border-radius: clamp(12px, 3.5vw, 16px);
+
       color:#fff;
       text-decoration:none;
       font-size: clamp(14px, 3.8vw, 17px);
       line-height: 1.2;
+
       box-shadow: 0 10px 18px rgba(0,0,0,.12);
       transition: transform .15s ease, box-shadow .15s ease;
+    }
+
+    .btn i{
+      font-size: 1em;
+      opacity: .95;
+      flex: 0 0 auto;
     }
 
     .btn:hover{
       transform:translateY(-2px);
       box-shadow:0 14px 28px rgba(0,0,0,.16);
+    }
+
+    /* Better feel on touch devices */
+    @media (hover: none){
+      .btn:hover{
+        transform:none;
+        box-shadow: 0 10px 18px rgba(0,0,0,.12);
+      }
+      .btn:active{
+        transform: translateY(1px);
+      }
     }
 
     .brown{ background:var(--brown); }
@@ -172,11 +215,44 @@
     }
 
     .footer a:hover{ opacity:1; }
+
+    /* Hide ornaments on very small screens */
+    @media (max-width:380px){
+      .ornament{ display:none; }
+    }
   </style>
 </head>
 
 <body>
   <div class="wrap">
+
+    <!-- Side ornaments -->
+    <svg class="ornament left" viewBox="0 0 200 260" aria-hidden="true">
+      <path d="M98 18c-18 28-14 57 14 78 18 13 34 34 32 64-2 41-43 73-88 70"
+        fill="none" stroke="rgba(59,47,47,.55)" stroke-width="2" stroke-linecap="round"/>
+      <path d="M76 50c10 8 22 11 36 8" fill="none" stroke="rgba(59,47,47,.45)" stroke-width="2" stroke-linecap="round"/>
+      <path d="M70 92c14 5 26 3 40-6" fill="none" stroke="rgba(59,47,47,.45)" stroke-width="2" stroke-linecap="round"/>
+      <path d="M62 132c18 2 32-4 46-18" fill="none" stroke="rgba(59,47,47,.45)" stroke-width="2" stroke-linecap="round"/>
+      <path d="M56 172c20-4 34-14 44-30" fill="none" stroke="rgba(59,47,47,.45)" stroke-width="2" stroke-linecap="round"/>
+      <circle cx="112" cy="32" r="7" fill="rgba(59,47,47,.22)"/>
+      <circle cx="128" cy="82" r="6" fill="rgba(59,47,47,.18)"/>
+      <circle cx="108" cy="140" r="5" fill="rgba(59,47,47,.16)"/>
+      <circle cx="88" cy="206" r="6" fill="rgba(59,47,47,.18)"/>
+    </svg>
+
+    <svg class="ornament right" viewBox="0 0 200 260" aria-hidden="true">
+      <path d="M98 18c-18 28-14 57 14 78 18 13 34 34 32 64-2 41-43 73-88 70"
+        fill="none" stroke="rgba(59,47,47,.55)" stroke-width="2" stroke-linecap="round"/>
+      <path d="M76 50c10 8 22 11 36 8" fill="none" stroke="rgba(59,47,47,.45)" stroke-width="2" stroke-linecap="round"/>
+      <path d="M70 92c14 5 26 3 40-6" fill="none" stroke="rgba(59,47,47,.45)" stroke-width="2" stroke-linecap="round"/>
+      <path d="M62 132c18 2 32-4 46-18" fill="none" stroke="rgba(59,47,47,.45)" stroke-width="2" stroke-linecap="round"/>
+      <path d="M56 172c20-4 34-14 44-30" fill="none" stroke="rgba(59,47,47,.45)" stroke-width="2" stroke-linecap="round"/>
+      <circle cx="112" cy="32" r="7" fill="rgba(59,47,47,.22)"/>
+      <circle cx="128" cy="82" r="6" fill="rgba(59,47,47,.18)"/>
+      <circle cx="108" cy="140" r="5" fill="rgba(59,47,47,.16)"/>
+      <circle cx="88" cy="206" r="6" fill="rgba(59,47,47,.18)"/>
+    </svg>
+
     <main class="card">
       <div class="badge">
         <div class="brand">
@@ -190,17 +266,17 @@
       <div class="divider"></div>
 
       <div class="links">
-        <a class="btn brown" href="#"><i class="fa-solid fa-fire-flame-curved"></i> Shop Decorative Candles</a>
-        <a class="btn sage" href="#"><i class="fa-solid fa-cheese"></i> Charcuterie Boards</a>
-        <a class="btn terra" href="#"><i class="fa-solid fa-pen-nib"></i> Custom Orders</a>
-        <a class="btn brown" href="#"><i class="fa-solid fa-camera-retro"></i> Latest Creations</a>
-        <a class="btn sage" href="#"><i class="fa-brands fa-tiktok"></i> TikTok</a>
+        <a class="btn brown" href="#"><i class="fa-solid fa-fire-flame-curved" aria-hidden="true"></i> Shop Decorative Candles</a>
+        <a class="btn sage" href="#"><i class="fa-solid fa-cheese" aria-hidden="true"></i> Charcuterie Boards</a>
+        <a class="btn terra" href="#"><i class="fa-solid fa-pen-nib" aria-hidden="true"></i> Custom Orders</a>
+        <a class="btn brown" href="#"><i class="fa-solid fa-camera-retro" aria-hidden="true"></i> Latest Creations</a>
+        <a class="btn sage" href="#"><i class="fa-brands fa-tiktok" aria-hidden="true"></i> TikTok</a>
       </div>
 
       <div class="footer">
-        <a href="#" target="_blank">Instagram</a>
-        <a href="#" target="_blank">Facebook</a>
-        <a href="#" target="_blank">TikTok</a>
+        <a href="#" target="_blank" rel="noreferrer">Instagram</a>
+        <a href="#" target="_blank" rel="noreferrer">Facebook</a>
+        <a href="#" target="_blank" rel="noreferrer">TikTok</a>
       </div>
     </main>
   </div>
