--- a/index.html
+++ b/index.html
@@ -7,49 +7,45 @@
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display&display=swap" rel="stylesheet" />
-
-  <!-- Styles -->
+  
+  <!-- Stylesheet -->
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
-    
-    <!-- Logo Header -->
+
+    <!-- Logo -->
     <header>
       <img src="Assets/logo.png" alt="Christina's Kreations Logo" class="logo" />
       <p class="tagline">Handcrafted pieces made with care &amp; creativity</p>
     </header>
 
-    <!-- Button Grid -->
+    <!-- Buttons -->
     <main class="buttons">
       <a class="button red" href="#">
-        <img src="Assets/icons/Candle_Transparent.png" alt="Candle Icon" />
+        <img src="Assets/Icons/Candle Transparent.png" alt="Candle Icon" />
         Shop Decorative Candles
       </a>
       <a class="button green" href="#">
-        <img src="Assets/icons/Charcuterie_Boards Transparent.png" alt="Charcuterie Icon" />
+        <img src="Assets/Icons/Charcuterie_Boards Transparent.png" alt="Charcuterie Icon" />
         Charcuterie Boards & Serveware
       </a>
       <a class="button beige" href="#">
-        <img src="Assets/icons/orders transparent.png" alt="Pencil Icon" />
+        <img src="Assets/Icons/orders transparent.png" alt="Orders Icon" />
         Custom Orders
       </a>
-      <a class="button red" href="#">
-        <img src="Assets/icons/Instagram transparent.png" alt="Camera Icon" />
-        See Our Latest Creations
-      </a>
       <a class="button cream" href="#">
-        <img src="Assets/icons/Email transparent.png" alt="Mail Icon" />
+        <img src="Assets/Icons/Email transparent.png" alt="Email Icon" />
         Contact Christina
       </a>
     </main>
 
-    <!-- Footer Social Icons -->
+    <!-- Footer -->
     <footer>
       <div class="footer-icons">
-        <a href="#"><img src="Assets/icons/instagram.png" alt="Instagram" /></a>
-        <a href="#"><img src="Assets/icons/facebook.png" alt="Facebook" /></a>
-        <a href="#"><img src="Assets/icons/email.png" alt="Email" /></a>
+        <a href="#"><img src="Assets/Icons/instagram.png" alt="Instagram" /></a>
+        <a href="#"><img src="Assets/Icons/facebook.png" alt="Facebook" /></a>
+        <a href="#"><img src="Assets/Icons/Email_transparent.png" alt="Email Icon" /></a>
       </div>
     </footer>
 
