--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Buttons -->
     <main class="buttons">
       <a class="button red" href="#">
-        <img src="Assets/Icons/Candle Transparent.png" alt="Candle Icon" />
+        <img src="Assets/Icons/Candle_Transparent.png" alt="Candle Icon" />
         Shop Decorative Candles
       </a>
       <a class="button green" href="#">
@@ -31,7 +31,7 @@
         Charcuterie Boards & Serveware
       </a>
       <a class="button beige" href="#">
-        <img src="Assets/Icons/orders transparent.png" alt="Orders Icon" />
+        <img src="Assets/Icons/Orders transparent.png" alt="Orders Icon" />
         Custom Orders
       </a>
       <a class="button cream" href="#">
