--- a/index.html
+++ b/index.html
@@ -4,51 +4,37 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Christina's Kreations</title>
-
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display&display=swap" rel="stylesheet" />
-  
-  <!-- Stylesheet -->
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
-
-    <!-- Logo -->
     <header>
-      <img src="Assets/logo.png" alt="Christina's Kreations Logo" class="logo" />
-      <p class="tagline">Handcrafted pieces made with care &amp; creativity</p>
+      <h1>Christina's Kreations</h1>
+      <p class="subtitle">Handcrafted pieces made with care & creativity</p>
     </header>
 
-    <!-- Buttons -->
-    <main class="buttons">
-      <a class="button red" href="#">
-        <img src="Assets/Icons/Candle_Transparent.png" alt="Candle Icon" />
+    <main>
+      <a href="#" class="button red">
+        <img src="Assets/Icons/candle.png" alt="Candle icon" />
         Shop Decorative Candles
       </a>
-      <a class="button green" href="#">
-        <img src="Assets/Icons/Charcuterie_Boards Transparent.png" alt="Charcuterie Icon" />
+      <a href="#" class="button green">
+        <img src="Assets/Icons/chacuterie_boards.png" alt="Charcuterie icon" />
         Charcuterie Boards & Serveware
       </a>
-      <a class="button beige" href="#">
-        <img src="Assets/Icons/Orders transparent.png" alt="Orders Icon" />
+      <a href="#" class="button beige">
+        <img src="Assets/Icons/orders.png" alt="Custom Orders icon" />
         Custom Orders
       </a>
-      <a class="button cream" href="#">
-        <img src="Assets/Icons/Email transparent.png" alt="Email Icon" />
+      <a href="#" class="button red">
+        <img src="Assets/Icons/instagram.png" alt="Camera icon" />
+        See Our Latest Creations
+      </a>
+      <a href="#" class="button cream">
+        <img src="Assets/Icons/email.png" alt="Email icon" />
         Contact Christina
       </a>
     </main>
-
-    <!-- Footer -->
-    <footer>
-      <div class="footer-icons">
-        <a href="#"><img src="Assets/Icons/instagram.png" alt="Instagram" /></a>
-        <a href="#"><img src="Assets/Icons/facebook.png" alt="Facebook" /></a>
-        <a href="#"><img src="Assets/Icons/Email_transparent.png" alt="Email Icon" /></a>
-      </div>
-    </footer>
-
   </div>
 </body>
 </html>
